Software and datasets to support 'Modern Applied Statistics with S',
fourth edition, by W. N. Venables and B. D. Ripley.
Springer, 2002, ISBN 0-387-95457-0.

This file documents software changes since the third edition.


- no copying of datasets even in R.
- model.frame method for multinom (even in R).
- nnet now uses the C interface to optim.
- nnet.Hess has been renamed nnetHess.
- vcov.multinom now computes the Hessian analytically (thanks to David Firth).
- predict methods for multinom, nnet now check newdata types
- model.frame.multinom now looks for the environment of the original formula
- multinom has a new `model' argument defaulting to TRUE.
- the multinom methods for add1, dropterm and anova now check
  for changes in the number of cases in use caused e.g. by na.action=na.omit.
- added confint() method for multinom.
- added logLik() method for multinom.
- summary() for multinom now defaults to correlation=FALSE.
- nnet() reports on 'convergence'.
- confint.multinom() works better with a non-default 'parm'