@@ -20,3 +20,5 @@ This file documents software changes since the third edition.
 - summary() for multinom now defaults to correlation=FALSE.
 - nnet() reports on 'convergence'.
 - confint.multinom() works better with a non-default 'parm'
+- multinom() and nnet(softmax=TRUE) give an explicit error message for
+  one-category responses.
